--- a/src/style.scss
+++ b/src/style.scss
@@ -1,35 +1,43 @@
 body {
   background: var(--background);
   display: flex;
-  align-items: center;
+
   justify-content: center;
   overflow: hidden;
   transition: 0.5s background ease;
-  margin-left: 20px;
-  margin-right: 20px;
-  width: 50%;
+  margin-left: 100px;
+  margin-right: 100px;
+  background-repeat:no-repeat; 
+  background-attachment:scroll;
+ height: 100vh;
+ font-family: "Comic Sans MS", "Comic Sans", cursive;
+ text-shadow: 1px 1px rgb(0, 0, 0);
 }
 
 .dark {
   background-color: #333;
-  color: #fff;
+  color: #ffffff;
 }
 .light {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #333;
   
 
 }
 
+
+
 .link {
   color: rgb(143, 81, 165);
   text-decoration: none;
 }
-
 .nav {
   display: flex;
   justify-content: space-between;
   padding: 5px;
+  width: 100%;
+  background-color: #807f7fe7;
+  border-radius: 25%;
 }
 
 
@@ -38,12 +46,24 @@ body {
   flex-direction: row;
    gap: 20px;
   justify-content: center;
+  font-size: large;
 }
 
+.container {
+  width: 70vh;
+}
 
+.text {
+  color : rgb(86, 118, 187);
+  font-size: large;
+}
+
+.text2 {
+  color : rgb(202, 62, 62);
+}
 
 .theme-switch {
-  --background: #fff;
+  --background: #a5a3a3da;
   --text: #000;
   color: var(--text);
   cursor: pointer;
@@ -86,7 +106,8 @@ body {
 .works {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
+  
 }
 
 .cards {
@@ -101,5 +122,7 @@ body {
   margin: 1rem;
   padding: 2rem 0 2rem 0;
   text-align: center;
+  box-shadow: 20px 20px 20px yellow;
+  text-shadow: 1px 1px rgb(0, 0, 0);
 }
 
